# cryptofuture

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mexc_futures_bot.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
autoconfig/: wizard.py
backtest/: engine.py
cli/: bot.py
conf/: example.yml
core/: models.py
docs/: PLAYBOOK.md  RISK_POLICY.md  STRATEGY_GUIDE.md
exchanges/: mexc.py
live/: runner.py
monitor/: api.py
paper/: runner.py
risk/: manager.py
strategies/: momentum_ema.py
tests/: test_risk_manager.py
